# rightmove_alerter

./: .gitignore  alert.py  gmail_helper.py  pyproject.toml  run_alerter.bat
src/house_alerts/: alert.py
